- Custom Metronome SFX with multiple sound files can be registered by putting a 
  folder of sound files into the sfx folder.

Changes:
- If no more sound emitters are found when trying to play a sound an there are
  paused emitters waiting, cannibalize the first waiting emitter to be able to play
  the sound.
- Added a new default SFX to the Metronome: Lub-Dub

Fixed Bugs:
- Fixed a crash occurring when stopping a debug session mid Scene transition.
- Fixed a UI bug causing colors of buttons in button prompts being ignored.
- Fixed buttons always being rendered as html when comming from EOS scripts.
- Fixed SceneManager (pages) function: isEnabled in eval expressions.
- Fixed resolving of Scenes when a Layout contains disabled Scenes after a 
  random Splitter Node.
- Fixed PlayerSceneManager gotoScene not blocking the execution as intended
  until the scene changes.

=================
Version 1.4.4.0
=================

Fixed Bugs:
- Fixed Metronome spawning the wrong device commands in some cases.

=================
Version 1.4.3.0
=================

Fixed Bugs:
- Fixed Metronome sending invalid LinearCmd for fast BPMs.
- Implemented bounds checking on the client side for commands.
- Fixed a stack owerflow when waiting for a connector connection that is
  already attempting a connection, but runs into timeout.
- Fixed scene selecion via pre-defined Splitter nodes not working.
- Fixed Metronome device setting not working correctly.

=================
Version 1.4.2.0
=================

Fixed Bugs:
- Fixed sendLinearCmd and sendRotateCmd not working properly.
- Fixed a bug with sendLinearCmd using sending the movement in the wrong unit 
  to the device resulting in 0ms linear movements.
- Fixed generated device command snippets.
- Fixed the PlayerMetronome not stoping and interrupting devices when needed.
- Fixed pausing the player not stopping the device temporarily.
- Fixed unloading the Player not sending a stop command.

=================
Version 1.4.1.0