@@ -57,8 +57,7 @@
         <li><b>Project Name</b>: The <a href="qrc:/resources/help/editor/project_name_help.html">Project Name</a>
         is the same as the project folder name and thus must conform
         to the operating system's folder naming rules and some application specific rules.
-        The project name is not visible outside the editor, so it doesn't have to look nice,
-        just be somewhat describtive.<br></li>
+        The project name should be somewhat describtive.<br></li>
 
         <li><b>Project Version</b>: This <a href="qrc:/resources/help/editor/projectsettings/projectversion_help.html">Version</a> is not used for anything internally, but is visible to users in the
         project selection. It can be used, to keep track of different versions of a released
